update README and examples

--- a/examples/prog/multisrc/Makefile
+++ b/examples/prog/multisrc/Makefile
@@ -1,10 +1,5 @@
 PROG = main
-SRCS = draw.c main.c
+SRCS = main.c util.c
 MAN =
-
-CPPFLAGS.draw = '-DHELLO="helloooo"'
-
-# LDADD operates during the linking stage
-LDADD = -lcurses
 
 .include <rf/prog.mk>
